GGB-1817 make sure AV width does not jump when editing additional row
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@55009 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/av.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/av.less
@@ -250,7 +250,7 @@
 			padding-top: 2px;
 		}
 		&.additionalRow{
-			display:flex;
+			display: inline-flex;
 		}
 	}
 	
